SMC-536 - fix issues with drupal admin bar on mobile when the menu and search toggle is used.

--- a/profile/themes/smc_base/scss/elements/search.scss
+++ b/profile/themes/smc_base/scss/elements/search.scss
@@ -114,7 +114,7 @@
     position: absolute;
     right: 0;
     left: auto;
-    top: -50px;
+    top: -50px !important;
     width: 30%;
     background-color: transparent;
     padding: 0;
